# dms

./: .dockerignore  .env.example  .gitignore  .mise.toml  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  README.md  alembic.ini  docker-compose.prod.yml  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml  codeql.yml
alembic/: env.py  script.py.mako
alembic/versions/: 2419198ea4ed_add_search_and_audit_perf_indexes.py  2a4660993b0b_initial_schema.py  2c40bb4bc93f_retention_rules.py  6f826ad78867_add_file_name_to_document_versions.py  a08116197a07_add_project_status.py  a3f1c0de0003_audit_ip_redaction.py
backend/: Dockerfile  pyproject.toml
backend/app/: __init__.py  main.py  seed.py
backend/app/api/: __init__.py  routes_admin.py  routes_auth.py  routes_documents.py  routes_health.py  routes_me.py  routes_projects.py
backend/app/core/: cookies.py  deps.py  errors.py  project_access.py  ratelimit.py  tasks.py
backend/app/schemas/: admin.py  auth.py  common.py  document.py  project.py  retention.py
backend/app/services/: auth_service.py  compliance_service.py  document_service.py  project_service.py
backend/tests/: conftest.py  factories.py  test_auth.py  test_compliance.py  test_config.py  test_documents.py  test_me.py  test_projects.py  test_storage_crypto.py
docs/superpowers/plans/: 2026-06-15-frontend-ueberarbeitung.md  2026-06-15-g1-at-rest-encryption.md  2026-06-15-g3-retention-policy.md
docs/superpowers/prototypes/: dashboard.html  document-detail.html
docs/superpowers/specs/: 2026-06-15-frontend-ueberarbeitung-design.md
frontend/: Dockerfile  Dockerfile.dev  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppLayout.tsx  Pagination.tsx  RequireAuth.tsx  icons.tsx  ui.test.tsx  ui.tsx
frontend/src/features/account/: AccountPage.tsx  hooks.ts
frontend/src/features/admin/: AuditLogsPage.test.tsx  AuditLogsPage.tsx  CompliancePage.test.tsx  CompliancePage.tsx  UsersPage.tsx  hooks.ts
frontend/src/features/auth/: LoginPage.tsx  SetupPage.test.tsx  SetupPage.tsx
frontend/src/features/dashboard/: DashboardPage.tsx
frontend/src/features/documents/: DocumentDetailPage.tsx  hooks.ts  retention.test.ts  retention.ts
frontend/src/features/projects/: ProjectDetailPage.tsx  ProjectsPage.tsx  hooks.ts
frontend/src/lib/: apiClient.ts  auth.tsx  can.test.ts  can.ts  confirm.tsx  constants.ts  download.ts  format.ts  toast.tsx
frontend/src/types/: api.ts
scripts/: reencrypt_blobs.py
worker/: Dockerfile  pyproject.toml
worker/tests/: test_processing.py
worker/worker/: __init__.py  celery_tasks.py  extract.py
worker/worker/tasks/: maintenance.py  processing.py
