[project]
name = "dms-worker"
version = "0.1.0"
description = "Celery-Worker (Dateiverarbeitung, Retention, Export, Cleanup) fuer das DMS"
requires-python = ">=3.12"
dependencies = [
    "dms-core",
    "pypdf>=5.1",
    "python-docx>=1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["worker"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::DeprecationWarning"]
